# uav_control

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  testing_pid.m
uav_control/: constants.py  dynamics copy.py  dynamics.py
uav_control/allocators/: qp_control_allocator.py
uav_control/controllers/: .old.lqr_controller.py  geometric_controller.py  lqr_controller.py
uav_control/planners/: differential_flatness_planner.py  parametric_curve_planner.py  point_stabilize_planner.py  polynomial_planner.py  polynomial_trajgen.py  waypoint_planner.py
uav_control/rendering/: coordinate_frame.py  parametric_curve.py  polynomial_path.py  quadrotor_frame.py  static_coordinate_frame.py  traveled_path.py  waypoint_path.py
uav_control/tests/: orientation_lqr_control.ipynb  orientation_lqr_control.py  poly_trajgen.ipynb  quadrotor_geometric_control.py  quadrotor_lqr_control.py  quadrotor_lqr_control2.py  quadrotor_lqr_hover.py  test3.py
uav_control/utils/: find_package_root.py  math.py
